# payment-system-service

./: README.md  compose.yml  manage.py  pyproject.toml
payment_system_service/: asgi.py  settings.py  urls.py  wsgi.py
payment_system_service/api/: main.py
payment_system_service/users/: apps.py  models.py
payment_system_service/users/migrations/: 0001_initial.py
tests/: conftest.py  test_redirect.py
tests/test_users/: test_user_model.py
