[project]
name = "payment-system-service"
version = "0.0.0"
description = "A simple payment system service"
authors = [{ name = "Dêvid Teófilo", email = "nnick4673@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.4.1",
    "psycopg>=3.2.6",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "uvicorn[standard]>=0.34.2",
]
